| Summary: | ASTERISK-27298: Problem with expires on pjsip / outbound-publish | ||
| Reporter: | Cyrille Demaret (ziki) | Labels: | pjsip |
| Date Opened: | 2017-09-27 08:39:16 | Date Closed: | 2017-09-27 20:07:21 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_publish |
| Versions: | 14.6.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Hi,
There's a typo in res_pjsip_outbound_publish.c which cause Asterisk to always send an expires of 1 on PUBLISH. around the line 987 : {code} if (pjsip_publishc_init(publisher->client, &event, &server_uri, &from_uri, &to_uri, publish->expiration != PJ_SUCCESS)) { {code} it should be : {code} if (pjsip_publishc_init(publisher->client, &event, &server_uri, &from_uri, &to_uri, publish->expiration) != PJ_SUCCESS) { {code} Regards, Cyrille | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-09-27 08:39:17.197-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-09-27 20:07:21.886-0500 Change 6611 merged by Jenkins2: res_pjsip_outbound_publish.c: Fix misplaced parenthesis. [https://gerrit.asterisk.org/6611|https://gerrit.asterisk.org/6611] By: Friendly Automation (friendly-automation) 2017-09-27 20:13:32.628-0500 Change 6613 merged by Jenkins2: res_pjsip_outbound_publish.c: Fix misplaced parenthesis. [https://gerrit.asterisk.org/6613|https://gerrit.asterisk.org/6613] By: Friendly Automation (friendly-automation) 2017-09-28 05:03:20.257-0500 Change 6612 merged by Joshua Colp: res_pjsip_outbound_publish.c: Fix misplaced parenthesis. [https://gerrit.asterisk.org/6612|https://gerrit.asterisk.org/6612] | ||