res_pjsip_outbound_publish.c: Fix misplaced parenthesis.

The pjsip_publishc_init() call was referenced with a misplaced
parentheses.  As a result, outbound publication messages went out with an
expiration of 1 second.

ASTERISK-27298

Change-Id: I93622eabc8ee83e7a22e98c107f921284c605a08